[Alignment 2.0] changes after review