@@ -103,8 +103,10 @@ public class LookupGeneratorImpl implements LookupGenerator {
     }
 
     private static Set<CompiledGAVStrategy> compileMavenStrategies(Set<Strategy> strategies) {
-        return strategies == null ? Set.of()
-                : strategies.stream().map(CompiledGAVStrategy::from).collect(Collectors.toSet());
+        if (strategies == null) {
+            return Collections.emptySet();
+        }
+        return strategies.stream().map(CompiledGAVStrategy::from).collect(Collectors.toSet());
     }
 
     private static Set<QValue> extractQualifiers(Set<? extends CompiledStrategy<?>> strategies) {
@@ -259,7 +261,7 @@ public class LookupGeneratorImpl implements LookupGenerator {
             return Integer.compare(sim1, sim2);
         });
 
-        if (max.isPresent() && max.get().matchSignificance(artifact) != 0) {
+        if (max.map(k -> k.matchSignificance(artifact)).orElse(0) != 0) {
             return vas.get(max.get());
         }
 
